Restructure: VideoFlow - Video Team Management Platform
Rebuilt entire app to match client's technical document for
video editing team management (not generic project manager).

Backend changes:
- 11 database tables (users, clients, projects, delivery_jobs, tasks, approvals, comments, notifications, audit_log, refresh_tokens)
- RBAC with 5 roles: Admin, Manager, Editor, Freelancer, Client
- Delivery job versioning with auto-increment per project
- JWT + Refresh Token rotation
- Polymorphic comments (project/task/delivery)
- Role-aware dashboard
- Full audit logging on all write operations
- All routes under /api/v1/

Frontend changes (Flutter):
- Rebranded to "VideoFlow"
- 55 Dart files, 19 screens, all in Brazilian Portuguese
- Role-aware navigation and UI
- Client management (video clients)
- Delivery workflow with approve/reject/revision
- Kanban board with drag & drop
- Hours tracking (estimated vs actual)
- Admin dashboard with stats and audit log

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,13 +5,19 @@ NODE_ENV=development
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=project_management
+DB_NAME=video_editing_platform
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 
 # JWT
 JWT_SECRET=your_jwt_secret_here_change_in_production
-JWT_EXPIRES_IN=7d
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_SECRET=your_refresh_secret_here_change_in_production
+JWT_REFRESH_EXPIRES_IN=7d
 
 # CORS
 CORS_ORIGIN=http://localhost:5173
+
+# File uploads (delivery jobs)
+UPLOAD_DIR=./uploads
+MAX_FILE_SIZE=524288000
