--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-management-backend",
-  "version": "1.0.0",
-  "description": "Project management app backend with real-time features",
+  "name": "video-editing-platform-backend",
+  "version": "2.0.0",
+  "description": "Video editing team management platform - SaaS multi-tenant REST API",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
