--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,5 +1,5 @@
-name: project_manager
-description: A modern project management application with Kanban boards.
+name: videoflow
+description: VideoFlow - Plataforma de gerenciamento de equipes de edicao de video.
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -20,6 +20,10 @@ dependencies:
   shimmer: ^3.0.0
   fl_chart: ^0.65.0
   flutter_colorpicker: ^1.0.3
+  image_picker: ^1.0.7
+  file_picker: ^6.1.1
+  mime: ^1.0.5
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
