Security hardening + S3 file uploads + Docker deployment
Security:
- Helmet.js for secure HTTP headers
- Rate limiting (100 req/15min general, 20/15min auth)
- HTTP Parameter Pollution protection (hpp)
- Request ID tracking (X-Request-ID header)
- Input validation middleware (express-validator)
- File type filtering on uploads

File Storage:
- AWS S3 integration with presigned URLs (signed download links)
- AES256 server-side encryption
- Smart fallback to local storage when S3 not configured
- File upload via multer (memory storage for S3 streaming)
- Download endpoint with presigned URL generation

Docker:
- Dockerfile (Node 18 Alpine, health check)
- docker-compose.yml (API + PostgreSQL 16 + Redis 7)
- Auto-runs migrations on first start
- Volume persistence for data and uploads

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,16 @@
     "migrate": "node src/migrations/run.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.999.0",
+    "@aws-sdk/s3-request-presigner": "^3.999.0",
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
+    "cors": "^2.8.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
