--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,13 @@ CORS_ORIGIN=http://localhost:5173
 # File uploads (delivery jobs)
 UPLOAD_DIR=./uploads
 MAX_FILE_SIZE=524288000
+
+# AWS S3 (for delivery file storage)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=videoflow-deliveries
+
+# Security
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
