Rebrand to Duozz Flow + Google Drive integration
- Renamed all references from VideoFlow to Duozz Flow
- Package: com.duozzflow.app
- Replaced AWS S3 with Google Drive API for file storage
- Google Drive: service account auth, project subfolders, shareable links
- Updated docker-compose with Google Drive env vars
- Removed @aws-sdk dependencies
- Flutter web build verified with new branding

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ NODE_ENV=development
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=video_editing_platform
+DB_NAME=duozzflow
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 
@@ -22,11 +22,10 @@ CORS_ORIGIN=http://localhost:5173
 UPLOAD_DIR=./uploads
 MAX_FILE_SIZE=524288000
 
-# AWS S3 (for delivery file storage)
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
-S3_BUCKET_NAME=videoflow-deliveries
+# Google Drive (for delivery file storage)
+GOOGLE_SERVICE_ACCOUNT_EMAIL=
+GOOGLE_PRIVATE_KEY=
+GOOGLE_DRIVE_FOLDER_ID=
 
 # Security
 RATE_LIMIT_WINDOW_MS=900000
