--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,18 +10,17 @@ services:
       - PORT=3000
       - DB_HOST=postgres
       - DB_PORT=5432
-      - DB_NAME=videoflow
-      - DB_USER=videoflow
-      - DB_PASSWORD=${DB_PASSWORD:-videoflow_secret}
+      - DB_NAME=duozzflow
+      - DB_USER=duozzflow
+      - DB_PASSWORD=${DB_PASSWORD:-duozzflow_secret}
       - JWT_SECRET=${JWT_SECRET:-change_me_in_production}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-change_me_in_production}
       - JWT_EXPIRES_IN=15m
       - JWT_REFRESH_EXPIRES_IN=7d
       - CORS_ORIGIN=${CORS_ORIGIN:-*}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-}
-      - AWS_REGION=${AWS_REGION:-us-east-1}
-      - S3_BUCKET_NAME=${S3_BUCKET_NAME:-videoflow-deliveries}
+      - GOOGLE_SERVICE_ACCOUNT_EMAIL=${GOOGLE_SERVICE_ACCOUNT_EMAIL:-}
+      - GOOGLE_PRIVATE_KEY=${GOOGLE_PRIVATE_KEY:-}
+      - GOOGLE_DRIVE_FOLDER_ID=${GOOGLE_DRIVE_FOLDER_ID:-}
     depends_on:
       postgres:
         condition: service_healthy
@@ -32,16 +31,16 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      - POSTGRES_DB=videoflow
-      - POSTGRES_USER=videoflow
-      - POSTGRES_PASSWORD=${DB_PASSWORD:-videoflow_secret}
+      - POSTGRES_DB=duozzflow
+      - POSTGRES_USER=duozzflow
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-duozzflow_secret}
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./src/migrations/001_initial.sql:/docker-entrypoint-initdb.d/001_initial.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U videoflow -d videoflow"]
+      test: ["CMD-SHELL", "pg_isready -U duozzflow -d duozzflow"]
       interval: 5s
       timeout: 5s
       retries: 5
