--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,5 +1,5 @@
-name: videoflow
-description: VideoFlow - Plataforma de gerenciamento de equipes de edicao de video.
+name: duozzflow
+description: Duozz Flow - Plataforma de gerenciamento de equipes de edicao de video.
 publish_to: 'none'
 version: 1.0.0+1
 
