--- a/frontend/web/manifest.json
+++ b/frontend/web/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "ProjectFlow",
-  "short_name": "ProjectFlow",
+  "name": "Duozz Flow",
+  "short_name": "Duozz Flow",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#F1F5F9",
   "theme_color": "#2563EB",
-  "description": "Modern Project Management App",
+  "description": "Duozz Flow Platform",
   "orientation": "portrait-primary",
   "prefer_related_applications": false
 }
