--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.6'
@@ -24,7 +29,16 @@ jobs:
         working-directory: frontend
         run: flutter build apk --release
 
-      - name: Upload APK
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v1.0.0-demo
+          name: Duozz Flow v1.0 Demo
+          files: frontend/build/app/outputs/flutter-apk/app-release.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: duozzflow-apk
